--- a/first-network/crypto-config.yaml
+++ b/first-network/crypto-config.yaml
@@ -18,9 +18,9 @@ OrdererOrgs:
     Specs:
       - Hostname: orderer
       - Hostname: orderer2
-      - Hostname: orderer3
-      - Hostname: orderer4
-      - Hostname: orderer5
+      # - Hostname: orderer3
+      # - Hostname: orderer4
+      # - Hostname: orderer5
 
 # ---------------------------------------------------------------------------
 # "PeerOrgs" - Definition of organizations managing peer nodes
