--- a/first-network/docker-compose-etcdraft2.yaml
+++ b/first-network/docker-compose-etcdraft2.yaml
@@ -21,7 +21,16 @@ services:
       file: base/peer-base.yaml
       service: orderer-base
     environment:
+      - ORDERER_GENERAL_CLUSTER_LISTENPORT=8053
       - ORDERER_GENERAL_LISTENPORT=8050
+      - ORDERER_GENERAL_CLUSTER_SERVERCERTIFICATE=/var/hyperledger/orderer/msp/signcerts/orderer2.example.com-cert.pem
+      - ORDERER_GENERAL_CLUSTER_SERVERPRIVATEKEY=/var/hyperledger/orderer/msp/keystore/priv_sk
+      - ORDERER_GENERAL_CLUSTER_CLIENTCERTIFICATE=/var/hyperledger/orderer/msp/signcerts/orderer2.example.com-cert.pem
+      - ORDERER_GENERAL_CLUSTER_CLIENTPRIVATEKEY=/var/hyperledger/orderer/msp/keystore/priv_sk
+      # - ORDERER_GENERAL_CLUSTER_SERVERCERTIFICATE=/var/hyperledger/orderer/tls/server.crt
+      # - ORDERER_GENERAL_CLUSTER_SERVERPRIVATEKEY=/var/hyperledger/orderer/tls/server.key
+      # - ORDERER_GENERAL_CLUSTER_CLIENTCERTIFICATE=/var/hyperledger/orderer/tls/server.crt
+      # - ORDERER_GENERAL_CLUSTER_CLIENTPRIVATEKEY=/var/hyperledger/orderer/tls/server.key
     container_name: orderer2.example.com
     networks:
       - byfn
@@ -32,54 +41,4 @@ services:
       - orderer2.example.com:/var/hyperledger/production/orderer
     ports:
       - 8050:8050
-
-  orderer3.example.com:
-    extends:
-      file: base/peer-base.yaml
-      service: orderer-base
-    environment:
-      - ORDERER_GENERAL_LISTENPORT=9050
-    container_name: orderer3.example.com
-    networks:
-      - byfn
-    volumes:
-      - ./channel-artifacts/genesis.block:/var/hyperledger/orderer/orderer.genesis.block
-      - ./crypto-config/ordererOrganizations/example.com/orderers/orderer3.example.com/msp:/var/hyperledger/orderer/msp
-      - ./crypto-config/ordererOrganizations/example.com/orderers/orderer3.example.com/tls/:/var/hyperledger/orderer/tls
-      - orderer3.example.com:/var/hyperledger/production/orderer
-    ports:
-      - 9050:9050
-
-  orderer4.example.com:
-    extends:
-      file: base/peer-base.yaml
-      service: orderer-base
-    environment:
-      - ORDERER_GENERAL_LISTENPORT=10050
-    container_name: orderer4.example.com
-    networks:
-      - byfn
-    volumes:
-      - ./channel-artifacts/genesis.block:/var/hyperledger/orderer/orderer.genesis.block
-      - ./crypto-config/ordererOrganizations/example.com/orderers/orderer4.example.com/msp:/var/hyperledger/orderer/msp
-      - ./crypto-config/ordererOrganizations/example.com/orderers/orderer4.example.com/tls/:/var/hyperledger/orderer/tls
-      - orderer4.example.com:/var/hyperledger/production/orderer
-    ports:
-      - 10050:10050
-
-  orderer5.example.com:
-    extends:
-      file: base/peer-base.yaml
-      service: orderer-base
-    environment:
-      - ORDERER_GENERAL_LISTENPORT=11050
-    container_name: orderer5.example.com
-    networks:
-      - byfn
-    volumes:
-      - ./channel-artifacts/genesis.block:/var/hyperledger/orderer/orderer.genesis.block
-      - ./crypto-config/ordererOrganizations/example.com/orderers/orderer5.example.com/msp:/var/hyperledger/orderer/msp
-      - ./crypto-config/ordererOrganizations/example.com/orderers/orderer5.example.com/tls/:/var/hyperledger/orderer/tls
-      - orderer5.example.com:/var/hyperledger/production/orderer
-    ports:
-      - 11050:11050
+      - 8053:8053
